<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_activity"
    tools:context="***REMOVED***robotcarcontroller.MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <TextView
        android:id="@+id/textview_connection_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text=""
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintRight_toLeftOf="@+id/textview_connection_status"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar" />

    <Button
        android:id="@+id/button_direction_forward"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="134dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/forward"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_direction_stop"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_direction_left"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="54dp"
        android:layout_marginLeft="8dp"
        android:text="@string/left"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_direction_stop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/button_direction_stop" />

    <Button
        android:id="@+id/button_direction_right"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="58dp"
        android:layout_marginRight="8dp"
        android:text="@string/right"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_direction_stop"
        app:layout_constraintLeft_toRightOf="@id/button_direction_stop"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/button_direction_stop"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="100dp"
        android:layout_height="58dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/stop"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_direction_backward"
        app:layout_constraintLeft_toRightOf="@+id/button_direction_left"
        app:layout_constraintRight_toLeftOf="@+id/button_direction_right" />

    <Button
        android:id="@+id/button_direction_backward"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="134dp"
        android:layout_height="58dp"
        android:layout_marginBottom="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/backward"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:id="@+id/textView_left_ultrasound"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="@drawable/rect_grey"
        android:rotation = "315"
        app:layout_constraintRight_toLeftOf="@+id/imageView"
        android:layout_marginRight="0dp"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="0dp" />

    <TextView
        android:id="@+id/textView_front_ultrasound"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="@drawable/rect_grey"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/textView_right_ultrasound"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView_left_ultrasound" />

    <TextView
        android:id="@+id/textView_right_ultrasound"
        android:layout_width="40dp"
        android:layout_height="20dp"
        android:background="@drawable/rect_grey"
        android:rotation="45"
        app:layout_constraintLeft_toRightOf="@+id/imageView"
        android:layout_marginLeft="0dp"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:layout_marginTop="0dp" />

    <ImageView
        android:id="@+id/imageView"
        android:contentDescription="@string/ultrasound_desc"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginRight="8dp"
        android:visibility="visible"
        app:srcCompat="@drawable/circle_grey"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/button_direction_forward"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/textview_connection_status" />


</androidx.constraintlayout.widget.ConstraintLayout>
